# robotics

./: .gitignore  README.md
Mechanics/: actuators.md  mechatronics_plan_HTML.html  moment_shortcut.md
Section4/: services.md
bags/both_tops/: both_tops_0.mcap  metadata.yaml
bags/number_count_rosbag/: metadata.yaml  number_count_rosbag_0.mcap
bags/rosbag2_2026_06_04-11_18_43/: metadata.yaml  rosbag2_2026_06_04-11_18_43_0.mcap
cpp_for_robotics/: 01_robot_distance.cpp  02_eigen_example  02_eigen_example.cpp  03_standard_namespace_and_strings.cpp  04_cout_endl_cin  04_cout_endl_cin.cpp  05_main_and_command_line_args.cpp  06_02_global_vars.cpp  06_03_constants.cpp  06_04_moreDtypes_and_float_precision.cpp  06_05_printf.cpp  06_06_cin_and_cerr.cpp  06_07_typecasting.cpp  06_08_string_stream.cpp  06_09_getline.cpp  07_operators_and_conditionals.cpp  08_arrays_vectors_strings.cpp  09_functions_and_pointers.cpp  10_oops1.cpp  11_robot.cpp  11_robot.hpp  12_some_more_oops.cpp  13_robot_actuators.cpp  14_structs.cpp  15_operator_overloading.cpp  16_lambda_biography.md  16_lambda_expressions.cpp  16_lambda_in_detail.cpp  17_lambdas_and_fileio.cpp  18_macros.cpp  19_templates.cpp  20_smart_pointers.cpp  20_templates_playlist_code.cpp  21_smart_pointers.cpp  22_why_heap_and_smart_pointers.cpp  23_weak_pointers.cpp  24_smartPointers_course.cpp  hello  hello.cpp  output.txt  (+3 more)
cpp_for_robotics/Multithreading_in_CPP/: 01_intro.cpp  02_types_to_create_thread.cpp  03_join_and_detach  03_join_and_detach.cpp
cpp_for_robotics/OOPS_in_Cpp/: assignment.cpp  constructors.cpp  java_vs_cpp_transcript.md  lidarScanner.cpp  principles.cpp  staticMembers.cpp  ultimate.cpp
ros2_crash_course_ws/src/cpp_pkg/: CMakeLists.txt  package.xml
ros2_crash_course_ws/src/cpp_pkg/src/: cpp_pub.cpp  cpp_sub.cpp
ros2_crash_course_ws/src/python_pkg/: package.xml  setup.py
ros2_crash_course_ws/src/python_pkg/python_pkg/: python_pub.py  python_sub.py
ros2_ws/: ros2_cli_commands.md
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  first_cpp_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
ros2_ws/src/my_python_pkg/: package.xml  setup.py
ros2_ws/src/my_python_pkg/my_python_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  first_python_node.py  first_python_node_explained.md  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py
ros2_ws/templates_and_section_conclusion_pics/: cpp_node_template.cpp  cpp_node_template.txt
ros2_ws/templates_and_section_conclusion_pics/Section_2/: ros2_cli_commands.md
ros2_ws/templates_and_section_conclusion_pics/Section_3/: ros2_topics.md
